[project]
name = "sleepon-mcp"
version = "0.1.0"
description = "MCP server for Sleepon sleep tracker – provides sleep data analysis tools for AI assistants like Claude"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "sleepon", "sleep", "health", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "python-dotenv",
]

[project.scripts]
sleepon-mcp = "sleepon_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sleepon_mcp"]
